Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features:

  - Additional YAML "documents" from a spec file with '---' and '...'
    stream separators are no longer ignored; now treated as additional
    unnamed documents.

** Incompatible changes:

  - Calling require in a spec file now runs in the local environment,
    giving access to 'global' symbols from the newly loaded file from
    the local namespace.  Conversely, access to those same symbols is
    no longer available from "_G", the global environment table.


* Noteworthy changes in release 5 (2013-04-29) [stable]

** This release is a significant upgrade.

** New features:

  - Documentation reorganisation.  README.md is much simplified, with
    full documentation still in markdown at docs/specl.md.  The html
    documentation at http://gvvaughan.github.io/specl will be updated
    with every release from now on.

** Bug fixes:

  - './bootstrap' runs quickly with 4800 lines of code removed.

  - './configure' runs quickly with the remaining C macros removed.

  - 'progress' and 'report' formatters now report elapsed time rather
    than cpu time in their footer output.

  - The 'specl' LUA_PATH no longer picks up its own 'specl.std' module
    by mistake when a spec file requires the lua-stdlib 'std' module.

** Incompatible changes:

  - The 'should_error' matcher now takes arguments in the same order
    as the other matchers. LuaMacro injects a 'pcall' into every
    'expect' invocation, so the specifications are written
    intuitively:

        expect (error "failed").should_error "failed"

  - The Specl-1 Lua format for spec files is no longer supported, in
    part to clean up a lot of otherwise unused code, but also because
    Lua specs were accumulating too much magic to be easy to write by
    hand.

  - 'build-aux' speclc and the bundled generated 'specs/*_spec.lua'
    specs have been removed.

